syntax = "proto3";
package pb;
option go_package="github.com/grpc/gobus/apigw";

service UserServices{
    rpc UserSignUp(UserDataREQ) returns (Result);
    rpc UserLogin(LoginREQ)returns (Result);
    rpc EditUser(UserDataREQ)returns (Result);
    rpc DeleteUserById(IdREQ)returns (Result);
    rpc FindUserById(IdREQ)returns (Result);
    rpc CreateUser(UserDataREQ)returns (Result);
}
message UserDataREQ{
    string UserName = 1;
    string Password = 2;
    string Email = 3;
}
message LoginREQ{
    string Username = 1;
    string Password = 2;
}
message IdREQ{
    uint32 Id = 1;
}
message Result{
    string status = 1;
    string error = 2;
    string message = 3;
}
